refactor: 매개변수로 endOfWeek 직접 받아 처리 및 toList()로 코드 간결화 (#96)